feat : changed the leaderboard css

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
-<h1>Leaderboard</h1>
-<div id="podium" class="podium"></div>
-<div id="others"></div>
+<header class="top">
+  <h1>🏆 Leaderboard</h1>
+  <p class="subtitle">Live scores • Updated in real time</p>
+</header>
+
+<section id="podium" class="podium"></section>
+
+<section id="others" class="others"></section>
 
 <script src="leaderboard.js"></script>
 </body>
