made the connection between team page and admin page

--- a/public/admin.html
+++ b/public/admin.html
@@ -15,6 +15,12 @@
     <button id="joinBtn">Start Session</button>
   </div>
 
+  <div class="nav">
+  <button id="goTeam">👥 Team Page</button>
+  <button id="goScorer">📊 Scorer Panel</button>
+</div>
+
+
   <!-- Dashboard -->
   <div id="dashboard" class="hidden">
     <h2>Session: <span id="sessionLabel"></span></h2>
