--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <button id="joinBtn">Join</button>
   </div>
 
+  <button id="adminAccessBtn" class="admin-btn">
+  🔐 Admin Login
+</button>
+
+
   <!-- Buzzer Screen -->
   <div id="buzzerScreen" class="hidden">
     <h2 id="teamLabel"></h2>
